# xg-swap

./: LICENSE  README.md
dataset/: experiments.json
demo/: pyproject.toml
demo/demo/: demo.ipynb
quantxg/: pyproject.toml
quantxg/quantxg/: inference.py  xgboost_dyn.json  xgboost_dyn_cutoff=10.0_2024-02-26 17:32:48.866132.json  xgboost_ident_cutoff=18_2024-02-26 17:11:31.991575.json  xgboost_ident_v2.json  xgboost_model.json  xgboost_model_non_biased_training_n_per_path_length=18.json  xgboost_model_non_biased_training_n_per_path_length=22.0.json  xgboost_model_non_biased_training_n_per_path_length=23.0.json
xg_swap/: setup.py
xg_swap/xg_swap/: plugin.py  xg_swap_pass.py
