[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Waring <jean-baptiste@zetane.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.0.2"
xg-swap = {path = "../xg_swap", develop = true}
quantxg = {path = "../quantxg", develop = true}
notebook = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
