[tool.poetry]
name = "quantxg"
version = "0.1.0"
description = ""
authors = ["Jean-Baptiste Waring <jean-baptiste@zetane.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.0.3"
ipykernel = "^6.29.2"
loguru = "^0.7.2"
tqdm = "^4.66.2"
qiskit = "^1.0.0"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
watchdog = "^4.0.0"
qiskit-ibm-provider = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
